yamls/lb-ipHash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lb-iphash
  name: lb-iphash
spec:
  selector:
    matchLabels:
      app : lb-iphash
  replicas: 2
  template:
    metadata:
      labels:
        app : lb-iphash
    spec:
      containers:
        - name: lb-iphash
          image: lb-test:v1-arm
          command:
            - ./main
---

apiVersion: v1
kind: Service
metadata:
  name: lb-iphash
spec:
  selector:
    app: lb-iphash
  ports:
    - port: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/upstream-hash-by: "ip_hash"
  name: lb-iphash
spec:
  rules:
     - http:
        paths:
          - backend:
              serviceName: lb-iphash
              servicePort: 80
            path: /lb-iphash(/|$)(.*)
       host: lc.com
